--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,7 @@
   uni: University of Ottawa
   year: Sept. 2014 &mdash; May 2019
   summary: >
-    Actively involved with the Centre for Entrepreneurship and Engineering Design working on various engineering projects,
+    Actively involved with the Centre for Entrepreneurship and Engineering Design working on various engineering projects.
     Most notably team captain of uOttawa Rocketry, an interdisciplinary engineering team competing in the international
     Spaceport America Cup.
   list:
