--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,7 +12,7 @@
 
 - degree: International Baccalaureate Diploma
   uni: Michael Power St. Josephs
-  year: 2010 &mdash; 2014
+  year: Sept. 2010 &mdash; May. 2014
   summary: >
     Specialized in History and Chemistry in this academically intensive and globally recognized program. Participated in
     student ventures such as Free The Children, and Duke of Edinburgh Award
