--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,10 +1,10 @@
 - project: uOttawa Rocketry Team
   role: Co-Founder & Design Lead
-  duration: 2015 &mdash; Present
+  duration: Sept. 2015 &mdash; Present
   url: http://uorocketry.github.io
   description:
     uOttawa's first aerospace and rocketry team. Built a rocket which utilized a dynamic braking system
-    to precisely carry and 8.8lb payload to 10,000 feet. Started as a small group of sudents experimenting with rockets
+    to precisely carry and 8.8lb payload to 10,000 feet. Started as a small group of students experimenting with rockets
     to a multidisciplinary team of 20+ students.  Competed in 2018 and one of 24 teams selected from 126 competitors to
     deliver a podium presentation on the technology behind the air braking system.
 
