--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,8 +3,7 @@
   year: Sept. 2014 &mdash; May 2019
   summary: >
     Actively involved with the Centre for Entrepreneurship and Engineering Design working on various engineering projects.
-    Most notably team captain of uOttawa Rocketry, an interdisciplinary engineering team competing in the international
-    Spaceport America Cup.
+    Most notably team captain of uOttawa Rocketry, an interdisciplinary student team building high altitude rockets.
   list:
     - Dean's Honor List
     - Nortel Networks Scholarship
