--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,33 +1,25 @@
 - title: Software Engineering
   skills:
-    - title: Language Literacy
+    - title: Data Analytics
     - list:
-      - Advanced concepts of C++, specifically use of smart pointers and implementing buffered communication systems
-      - Python for numerically focused projects with extensive use of Scikit, Pandas, Tensorflow and Numpy frameworks
-      - Ruby in the context of Rails and web application development
-      - Javascript for front end applications using the React framework
-      - Matlab for optimization and simulation problems
-      - Java for Android app development, and general OOP
-      - C# for Microsoft .NET development
+      - Implemented a custom Tensorflow Estimator for multi-task training of a logistic regression model
+      - Constructed data modeling pipelines using Apache Spark and Kimball methodology
+      - Performed Survival Analysis study to track conversion rates during A/B tests
+      - Conducted feature engineering study to eliminate sparse features from linear model and improve training time
+      - Produced stakeholder reports using Mode Analytics and Jupyter Notebooks
 
-    - title: Data Science
+    - title: Data Engineering
     - list:
-      - Implemented data processing pipelines using Apache Spark
-      - Leveraged Beautiful Soup and Pandas to scrape and sanitize datasets from the web
-      - Produced stakeholder reports using Mode Analytics
+      - Shipped realtime recommendation system using data services including Apache Kafka, Apache Arrow
+      - Built a standalone microservice for querying Tensorflow models with online user features and processed data warehouse features
+      - Debugged and resolved min of the max problems in core data extraction stages
 
     - title: Web Technology
     - list:
+      - Utilized other data services, including Kafka Streaming, Redis, Sidekiq, and Sendgrid
       - Worked with MySQL and Postgres Databases at various scales
       - Configured applications running on GCP, AWS, and Heroku with Kubernetes and Docker containers
-      - Utilized other data services, including Kafka Streaming, Redis, Sidekiq, and Sendgrid
       - Resolved bugs through investigating logs in splunk and tracing back error messages.
-
-    - title: Embedded and IoT
-    - list:
-      - Build systems using Web Sockets, FTDI, SPI, I2C, UART, and BT interfaces
-      - Controlled devices using register write commands, and higher level REST APIs
-      - Understand principles of IP routing and various network topologies
 
     - title: Linux
     - list:
@@ -35,32 +27,8 @@
       - Solid understanding of Linux file system, and device tree
       - Leveraged system features such as cron, systemd, an bash scripting
 
-- title: Electrical Engineering
-  skills:
-    - title: Simulation Construction
+    - title: Language Literacy
     - list:
-      - Modeled complex time dependent systems in Matlab using transfer matrix method and Fourier transfer functions
-      - Used Matlab Simulink to solve optimization problems
-      - Used Multisim to analyze performance of circuits
-      - Self-taught FEA, and CFD simulations of basic geometry using both Solidworks and Simscale
-      - Used lab instrumentation to analyze circuits particularly the oscilloscope, logic analyzer, and 5052 spectrum analyzer
-
-    - title: Computer Aided Design & Manufacturing
-    - list:
-      - Built 3D models using Solidworks; conducting motion studies on mechanical assemblies
-      - Designed custom PCB Layouts in Eagle CAD and worked through the process of submitting boards for fabrication
-      - Experienced in the use of rapid prototyping tools, particularly laser cutting and 3D printing
-      - Hands on experience with traditional fabrication techniques, such as lathe, mill, TIG welding and sheet metalworking
-
-    - title: Control Systems
-    - list:
-      - Designed stable systems using Root Locus Technique, analytically and computationally using Matlab Control Systems Toolbox
-      - Signal filtering techniques such as Frequency, and Kalman filtering
-      - Operational understanding electromechanical devices and required support circuitry
-      - Proficient in VHDL for programming PLCs and FPGA specifically using Altair devices
-
-    - title: Communication Systems
-    - list:
-      - Operational understanding of routing in LAN and WAN networks
-      - Designed transmitters and receivers using various multiplexing and modulation techniques
-      - Understand the limitations of various communication mediums and protocols
+      - Advanced concepts of C++, specifically use of smart pointers and memory management
+      - Python for numerically focused projects with extensive use of Scikit, Pandas, Tensorflow and Numpy frameworks
+      - Matlab for optimization and simulation of physical systems from solar panels to rocket engines
