--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Bachelor's of Arts and Applied Science
+  uni: Texas A&M University
+  year: 2013 &mdash; 2017
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: Cumulative GPA 3.0
+  summary: Information Systems Security Association, Student Cyber Organization
 
 - degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
+  uni: Judson High School
+  year: 2006
   award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+  summary: Organizational leadership
