--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ resume_name:                    "Mattia Tupone"
 resume_title:                   "SysAdmin/DevOps"
 resume_contact_email:           "tupone.mattia@gmail.com"
 resume_header_contact_info: "Lanciano (CH), Italy | tupone.mattia@gmail.com"
-resume_header_intro: "<p>I'm a 23 years old SysAdmin/DevOps based in Italy with the passion for IT systems and coding.
+resume_header_intro: "<p>I'm a young SysAdmin/DevOps based in Italy with the passion for IT systems and coding.
 Moving across servers, code, and deployments, I started working as a professional in 2016 gaining and maturing experience
 day-by-day, always looking for new technologies and methods.<br>
 Experienced and certified by VMware on virtualization
