--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Jekyll Resume Template"
+title: "Dorian Dinh Xuan"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
@@ -14,13 +14,13 @@ resume_name:                    "Lisa M. Simpson"
 resume_title:                   "VP of Global Communications"
 
 # used for the contact button in _layouts/resume.html
-resume_contact_email:           "lisasimpson@youremailaddress.com"
+resume_contact_email:           "dorian.dinhxuan@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
+resume_contact_telephone:       "730 614 237"
+resume_contact_address:         "Poland/Warsaw"
 
-resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
+resume_header_contact_info:     "Poland/Warsaw • 730-614-237 • dorian.dinhxuan@gmail.com"
 display_header_contact_info:    "false"
 
 resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
@@ -45,14 +45,14 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/doriandinhxuan?tab=repositories"
+  resume_twitter_url:           "https://twitter.com/Dorian_dinhxuan"
+  # resume_dribbble_url:          "https://dribbble.com/jag"
   # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
+  resume_linkedin_url:          "https://www.linkedin.com/in/dorian-dinh-xuan/"
   # resume_instagram_url:         "insert your Instagram URL here"
   resume_website_url:           "http://doriandinhxuan.github.io"
-  resume_medium_url:            "https://medium.com/@jglovier"
+  resume_medium_url:            "https://medium.com/@doriandinhxuan"
 resume_print_social_links:      true
 
 # Design settings
