--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Lisa M. Simpson"
-resume_title:                   "VP of Global Communications"
+resume_name:                    "Dorian Dinh Xuan"
+resume_title:                   "AWS DevOps Engineer"
 
 # used for the contact button in _layouts/resume.html
 resume_contact_email:           "dorian.dinhxuan@gmail.com"
