--- a/_config.yml
+++ b/_config.yml
@@ -23,21 +23,32 @@ resume_contact_address:         "Poland/Warsaw"
 resume_header_contact_info:     "Poland/Warsaw • 730-614-237 • dorian.dinhxuan@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Cloud DevOps Engineer
-
+resume_header_intro: "<p>
+Cloud DevOps Engineer
+<br>
+<br>
 - IaaS Tools / Cloud Tools: AWS
+<br>
 - Provisioning / Configuration Management Tools: Terraform, Ansible, Vagrant, Packer
+<br>
 - Containerization: Docker, Elastic Container Services (ECS)
+<br>
 - CI/CD: Jenkins
+<br>
 - Monitoring / Logging Tools: Grafana, Prometheus, Zabbix
+<br>
 - Source Control Management: GIT, GitHub, Bitbucket
+<br>
 - Messaging / Collaboration: Slack, Jira, Trello
+<br>
 - OS: Linux (Centos, Ubuntu, Amazon Linux 2)
+<br>
 - Languages: Bash
-
+<br>
+<br>
 
 Certificates:
-
+<br>
 - Chmurowisko: Amazon Web Services - Droga Architekta</p>"
 
 # use "yes" to display the email contact button,
