--- a/_config.yml
+++ b/_config.yml
@@ -24,32 +24,31 @@ resume_header_contact_info:     "Poland/Warsaw • 730-614-237 • dorian.dinhxu
 display_header_contact_info:    "false"
 
 resume_header_intro: "<p>
-Cloud DevOps Engineer
+
+<h4><b>Cloud DevOps Engineer</b></h4>
+- <b>IaaS Tools/Cloud Tools:</b> AWS
 <br>
+- <b>Provisioning/Configuration Management Tools:</b> Terraform, Ansible, Vagrant, Packer
 <br>
-- IaaS Tools / Cloud Tools: AWS
+- <b>Containerization:</b> Docker, Elastic Container Services (ECS)
 <br>
-- Provisioning / Configuration Management Tools: Terraform, Ansible, Vagrant, Packer
+- <b>CI/CD:</b> Jenkins
 <br>
-- Containerization: Docker, Elastic Container Services (ECS)
+- <b>Monitoring/Logging Tools:</b> Grafana, Prometheus, Zabbix
 <br>
-- CI/CD: Jenkins
+- <b>Source Control Management:</b> GIT, GitHub, Bitbucket
 <br>
-- Monitoring / Logging Tools: Grafana, Prometheus, Zabbix
+- <b>Messaging/Collaboration:</b> Slack, Jira, Trello
 <br>
-- Source Control Management: GIT, GitHub, Bitbucket
+- <b>OS:</b> Linux (Centos, Ubuntu, Amazon Linux 2)
 <br>
-- Messaging / Collaboration: Slack, Jira, Trello
-<br>
-- OS: Linux (Centos, Ubuntu, Amazon Linux 2)
-<br>
-- Languages: Bash
+- <b>Languages:</b> Bash
 <br>
 <br>
 
-Certificates:
+<b>Certificates:</b>
 <br>
-- Chmurowisko: Amazon Web Services - Droga Architekta</p>"
+- <b>Chmurowisko:</b> Amazon Web Services - Droga Architekta</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
