--- a/_config.yml
+++ b/_config.yml
@@ -39,10 +39,10 @@ resume_looking_for_work:        "yes"
 resume_section_experience:      true
 resume_section_education:       true
 resume_section_skills:          true
-resume_section_certificates:        true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+resume_section_certificates:    true
+resume_section_recognition:     false
+resume_section_links:           false
+resume_section_associations:    false
 # resume_section_interests:       true
 
 # Resume social links
