--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 # links
 - url: "#"
-  description: Springfield Jazz Enthusiasts
+  description: Polish - native
 - url: "#"
-  description: Springfield Young Professionals
+  description: English - intermediate
