--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ resume_section_education:       true
 resume_section_certificates:    true
 resume_section_recognition:     false
 resume_section_links:           true
-resume_section_associations:    false
+resume_section_associations:    true
 # resume_section_interests:       true
 
 # Resume social links
