--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,3 @@
 # links
-- url: "#"
-  description: Polish - native
-- url: "#"
-  description: English - intermediate
+- description: Polish - native
+- description: English - intermediate
