--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,5 +1,7 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- summary: New Technology, Motorcycles, Bodybuilding/Fitness
+- description: New Technology
+- description: Motorcycles
+- description: Bodybuilding/Fitness
 
