--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_certificates:    true
 resume_section_recognition:     false
-resume_section_links:           true
+resume_section_links:           false
 resume_section_associations:    true
-# resume_section_interests:       true
+resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
