--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,3 +1,4 @@
 # links
-- description: Polish - native
-- description: English - intermediate
+
+# - description: Polish - native
+# - description: English - intermediate
