--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,6 +1,8 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: New Technology
-- organization: Motorcycles
-- organization: Bodybuilding/Fitness
+- organization: '#'
+  role: Polish - native
+- organization: '#'
+  role: English - intermediate
+
