--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -21,7 +21,7 @@
 - skill: Messaging / Collaboration
   description: Slack, Jira, Trello
 
-- skill: Operatin Systems
+- skill: Operating Systems
   description: Linux (Centos, Ubuntu, Amazon Linux 2)
 
 - skill: Scripting languages
