--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,7 @@
-# Degree
-- degree: Engineer
+
+- degree: Engineer of Animation 3D
   uni: Polish-Japanese Academy of Information Technology
   year: 2012 &mdash; 2017
+  awards:
+    - award: Summa Cumme Laude graduate
+  # summary: If you had any meaningful roles at college, feel free to write about them here
