--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ resume_title:                   "Cloud DevOps Engineer"
 resume_contact_email:           "dorian.dinhxuan@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "730 614 237"
+# resume_contact_telephone:       "730 614 237"
 resume_contact_address:         "Poland/Warsaw"
 
-resume_header_contact_info:     "Poland/Warsaw • 730-614-237 • dorian.dinhxuan@gmail.com"
-display_header_contact_info:    "true"
+resume_header_contact_info:     "dorian.dinhxuan@gmail.com • Poland/Warsaw"
+display_header_contact_info:    "yes"
 
 resume_header_intro: 
 # "<p>
